--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Guard middlewares for grammY",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "deno2node tsconfig.json",
     "build:watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -32,6 +32,7 @@
   ],
   "devDependencies": {
     "@types/node": "17.0.8",
+    "deno2node": "^1.1.0",
     "prettier": "2.5.1",
     "typescript": "4.5.4"
   },
