--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   "devDependencies": {
     "@types/node": "17.0.8",
     "deno2node": "^1.1.0",
-    "prettier": "2.5.1",
-    "typescript": "4.5.4"
+    "prettier": "2.5.1"
   },
   "files": [
     "dist"
