--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "deno2node tsconfig.json",
-    "build:watch": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "deno lint --config deno.json",
+    "fmt": "deno fmt --config deno.json"
   },
   "repository": {
     "type": "git",
@@ -32,8 +32,7 @@
   ],
   "devDependencies": {
     "@types/node": "17.0.8",
-    "deno2node": "1.1.0",
-    "prettier": "2.5.1"
+    "deno2node": "1.1.0"
   },
   "files": [
     "dist"
