--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "@grammyjs/plugin-template",
-  "version": "1.0.0",
-  "description": "A Simple Pluging Template For grammY",
-  "homepage": "https://grammy.dev/plugins/MYPLUGIN",
-  "main": "./out/index.js",
-  "type": "commonjs",
+  "name": "@bot-base/grammy-plugin-template",
+  "version": "0.1.0",
+  "description": "A plugin template for grammY",
+  "homepage": "https://github.com/bot-base/grammy-plugin-template#readme",
+  "files": [
+    "dist/"
+  ],
+  "main": "./dist/mod.js",
+  "types": "./dist/mod.d.ts",
   "scripts": {
-    "build": "deno2node tsconfig.json"
+    "build": "deno2node tsconfig.json",
+    "lint": "deno lint --config deno.json",
+    "fmt": "deno fmt --config deno.json"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Amir-Zouerami/plugin-template.git"
+    "url": "git+https://github.com/bot-base/grammy-plugin-template.git"
   },
-  "exports": {
-    ".": "./out/index.js"
-  },
-  "files": [
-    "out/"
-  ],
-  "author": "Amir Zouerami",
+  "author": "deptyped <deptyped@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Amir-Zouerami/plugin-template/issues"
+    "url": "https://github.com/bot-base/grammy-plugin-template/issues"
   },
   "peerDependencies": {
-    "grammy": "^1.5.1"
+    "grammy": "^1.0.0"
   },
   "devDependencies": {
-    "deno2node": "~1.0.0"
+    "deno2node": "1.4.0"
   },
   "keywords": [
-    "grammY",
-    "Telegram bot framework",
-    "plugin"
+    "grammy",
+    "bot",
+    "telegram",
+    "telegram-bot",
+    "telegram-bot-api"
   ]
 }
