--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "grammy": "^1.0.0"
   },
   "devDependencies": {
-    "deno2node": "1.4.0"
+    "deno2node": "1.4.0",
+    "ts-toolbelt": "^9.6.0",
+    "utility-types": "^3.10.0"
   },
   "keywords": [
     "grammy",
